changed ancillary information display (alignment issues and revamped css a bit)

--- a/frontend/css/relationships.css
+++ b/frontend/css/relationships.css
@@ -1,5 +1,4 @@
-.tooltipsy
-{
+.tooltipsy {
     padding: 10px;
     max-width: 200px;
     color: #303030;
@@ -7,44 +6,48 @@
     border: 2px solid #885415;
 }
 
-ul {
-    text-align: left;
-    margin-left: 2px;
-    padding-left: 5px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    list-style-type: disc;
+div.list-entry {
+    overflow: hidden;
+    width: 100%;
+    margin-left: 8px;
 }
 
-div.extra-info{
-    float:right;
-}
-span.help-ptr{
-   background: url("/images/qmark.jpg") no-repeat center right;
-   width:20px;
-   height: 15px;
-   display: inline-block;
-    float:right;
+
+div.list-text {
+    float: right;
+    width:90%;
+    height: 100%;
+    right: 0;
 }
 
-.data-title{
+div.help-ptr{
+    float: left;
+    height: 100%;
+    width: 10%;
+}
+
+img.list-img {
+    margin-right: 5px;
+    vertical-align: middle;
+}
+
+.data-title {
     text-align: center;
     font-weight: bolder;
     font-size: 20px;
     padding: 5px 0px 10px 0px;
 }
 
-.data-subtitle{
-    text-align:left;
-    margin-top:10px;
+.data-subtitle {
+    text-align: left;
+    margin-top: 10px;
     font-weight: bold;
     font-size: 16px;
 }
 
-.data-description{
+.data-description {
     font-style: italic;
 }
-
 
 #main {
     margin-top: 20px;
@@ -54,17 +57,16 @@ span.help-ptr{
     border: 4px solid black;
     overflow: hidden;
 }
-    
-#data-select{
- text-align:center;
- float:left;
-}                    
+
+#data-select {
+    text-align: center;
+    float: left;
+}
 
 .column {
     position: relative;
     float: left;
 }
-
 
 #leftpanel {
     width: 700px;
@@ -78,7 +80,7 @@ span.help-ptr{
     padding-left: 5px;
     width: 200px;
     height: 600px; /*the height of the main area */
-    overflow: auto;
+    overflow: hidden;
     border-left: 4px black solid;
 }
 
@@ -86,9 +88,9 @@ span.help-ptr{
     width: 100%;
     /*height: 130px;*/
     padding-top: 10px;
-    padding-bottom:10px;
+    padding-bottom: 10px;
     border-top: 4px black solid;
-} 
+}
 
 #bottomtitle {
     font-weight: bold;
@@ -100,7 +102,6 @@ span.help-ptr{
     text-align: justify;
     padding: 5px 5px 0 5px;
 }
-
 
 /* LEGEND */
 #legend {
@@ -118,7 +119,7 @@ span.help-ptr{
 .leg_node {
     float: left;
     width: 23.5%;
-    margin-left:1%;
+    margin-left: 1%;
 }
 
 .leg_text {
@@ -126,7 +127,6 @@ span.help-ptr{
     padding-top: 3px;
     width: 75%;
 }
-
 
 path {
     stroke: #15317E;
